--- a/genindex.html
+++ b/genindex.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.2054.ge07ddf2 documentation</title>
+    <title>Index &#8212; Thetis 0+untagged.2082.gf1a0bbb documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css?v=0f3339d6" />
-    <script src="_static/documentation_options.js?v=70f0a730"></script>
+    <script src="_static/documentation_options.js?v=ccd1159c"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="#" />
@@ -592,10 +592,10 @@
       </ul></li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.check_salinity_conservation">check_salinity_conservation (thetis.options.ModelOptions3d attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.check_salinity_overshoot">check_salinity_overshoot (thetis.options.ModelOptions3d attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.options.SedimentModelOptions.check_sediment_conservation">check_sediment_conservation (thetis.options.SedimentModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.SedimentModelOptions.check_sediment_overshoot">check_sediment_overshoot (thetis.options.SedimentModelOptions attribute)</a>
@@ -822,6 +822,8 @@
         <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.create_function_spaces">(thetis.solver2d.FlowSolver2d method)</a>
 </li>
       </ul></li>
+      <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.create_iterator">create_iterator() (thetis.solver2d.FlowSolver2d method)</a>
+</li>
       <li><a href="thetis.html#thetis.solver.FlowSolver.create_timestepper">create_timestepper() (thetis.solver.FlowSolver method)</a>
 
       <ul>
@@ -1041,6 +1043,8 @@
       <li><a href="thetis.html#thetis.inversion_tools.ControlRegularizationManager.eval_cost_function">eval_cost_function() (thetis.inversion_tools.ControlRegularizationManager method)</a>
 
       <ul>
+        <li><a href="thetis.html#thetis.inversion_tools.GradientRegularizationCalculator.eval_cost_function">(thetis.inversion_tools.GradientRegularizationCalculator method)</a>
+</li>
         <li><a href="thetis.html#thetis.inversion_tools.HessianRegularizationCalculator.eval_cost_function">(thetis.inversion_tools.HessianRegularizationCalculator method)</a>
 </li>
         <li><a href="thetis.html#thetis.inversion_tools.RegularizationCalculator.eval_cost_function">(thetis.inversion_tools.RegularizationCalculator method)</a>
@@ -1152,8 +1156,12 @@
 </li>
       <li><a href="thetis.html#thetis.forcing.FES2004TidalBoundaryForcing">FES2004TidalBoundaryForcing (class in thetis.forcing)</a>
 </li>
-      <li><a href="thetis.html#thetis.diagnostics.HessianRecoverer2D.field_2d">field_2d (thetis.diagnostics.HessianRecoverer2D attribute)</a>
+      <li><a href="thetis.html#thetis.diagnostics.GradientRecoverer2D.field_2d">field_2d (thetis.diagnostics.GradientRecoverer2D attribute)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.diagnostics.HessianRecoverer2D.field_2d">(thetis.diagnostics.HessianRecoverer2D attribute)</a>
 </li>
+      </ul></li>
       <li><a href="thetis.html#thetis.field_defs.field_metadata">field_metadata (in module thetis.field_defs)</a>
 </li>
       <li><a href="thetis.html#thetis.utility.FieldDict">FieldDict (class in thetis.utility)</a>
@@ -1192,10 +1200,10 @@
 </li>
       <li><a href="thetis.html#thetis.configuration.FiredrakeVectorExpression">FiredrakeVectorExpression (class in thetis.configuration)</a>
 </li>
-      <li><a href="thetis.html#thetis.timezone.FixedTimeZone">FixedTimeZone (class in thetis.timezone)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="thetis.html#thetis.timezone.FixedTimeZone">FixedTimeZone (class in thetis.timezone)</a>
+</li>
       <li><a href="thetis.html#thetis.solver.FlowSolver">FlowSolver (class in thetis.solver)</a>
 </li>
       <li><a href="thetis.html#thetis.solver2d.FlowSolver2d">FlowSolver2d (class in thetis.solver2d)</a>
@@ -1385,6 +1393,10 @@
       <li><a href="thetis.html#thetis.stability_functions.GOTMStabilityFunctionCheng">GOTMStabilityFunctionCheng (class in thetis.stability_functions)</a>
 </li>
       <li><a href="thetis.html#thetis.stability_functions.GOTMStabilityFunctionKanthaClayson">GOTMStabilityFunctionKanthaClayson (class in thetis.stability_functions)</a>
+</li>
+      <li><a href="thetis.html#thetis.diagnostics.GradientRecoverer2D">GradientRecoverer2D (class in thetis.diagnostics)</a>
+</li>
+      <li><a href="thetis.html#thetis.inversion_tools.GradientRegularizationCalculator">GradientRegularizationCalculator (class in thetis.inversion_tools)</a>
 </li>
       <li><a href="thetis.html#thetis.forcing.FES2004TidalBoundaryForcing.grid_nc_file">grid_nc_file (thetis.forcing.FES2004TidalBoundaryForcing attribute)</a>
 </li>
@@ -2501,9 +2513,11 @@
 </li>
       <li><a href="thetis.html#thetis.utility3d.SmagorinskyViscosity">SmagorinskyViscosity (class in thetis.utility3d)</a>
 </li>
-      <li><a href="thetis.html#thetis.diagnostics.HessianRecoverer2D.solve">solve() (thetis.diagnostics.HessianRecoverer2D method)</a>
+      <li><a href="thetis.html#thetis.diagnostics.GradientRecoverer2D.solve">solve() (thetis.diagnostics.GradientRecoverer2D method)</a>
 
       <ul>
+        <li><a href="thetis.html#thetis.diagnostics.HessianRecoverer2D.solve">(thetis.diagnostics.HessianRecoverer2D method)</a>
+</li>
         <li><a href="thetis.html#thetis.diagnostics.KineticEnergyCalculator.solve">(thetis.diagnostics.KineticEnergyCalculator method)</a>
 </li>
         <li><a href="thetis.html#thetis.diagnostics.VorticityCalculator2D.solve">(thetis.diagnostics.VorticityCalculator2D method)</a>
@@ -2930,6 +2944,8 @@
         <li><a href="thetis.html#module-thetis.timezone">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     thetis.tracer_eq
 
@@ -2965,8 +2981,6 @@
         <li><a href="thetis.html#module-thetis.utility">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     thetis.utility3d
 
@@ -3000,46 +3014,6 @@
 </li>
       <li><a href="thetis.html#thetis.options.TidalTurbineOptions">TidalTurbineOptions (class in thetis.options)</a>
 </li>
-      <li><a href="thetis.html#thetis.implicitexplicit.timed_region">timed_region() (in module thetis.implicitexplicit)</a>
-
-      <ul>
-        <li><a href="thetis.html#thetis.rungekutta.timed_region">(in module thetis.rungekutta)</a>
-</li>
-        <li><a href="thetis.html#thetis.timeintegrator.timed_region">(in module thetis.timeintegrator)</a>
-</li>
-      </ul></li>
-      <li><a href="thetis.html#thetis.timed_stage">timed_stage() (in module thetis)</a>
-
-      <ul>
-        <li><a href="thetis.html#thetis.callback.timed_stage">(in module thetis.callback)</a>
-</li>
-        <li><a href="thetis.html#thetis.coupled_timeintegrator.timed_stage">(in module thetis.coupled_timeintegrator)</a>
-</li>
-        <li><a href="thetis.html#thetis.coupled_timeintegrator_2d.timed_stage">(in module thetis.coupled_timeintegrator_2d)</a>
-</li>
-        <li><a href="thetis.html#thetis.equation.timed_stage">(in module thetis.equation)</a>
-</li>
-        <li><a href="thetis.html#thetis.exporter.timed_stage">(in module thetis.exporter)</a>
-</li>
-        <li><a href="thetis.html#thetis.implicitexplicit.timed_stage">(in module thetis.implicitexplicit)</a>
-</li>
-        <li><a href="thetis.html#thetis.limiter.timed_stage">(in module thetis.limiter)</a>
-</li>
-        <li><a href="thetis.html#thetis.rungekutta.timed_stage">(in module thetis.rungekutta)</a>
-</li>
-        <li><a href="thetis.html#thetis.sediment_model.timed_stage">(in module thetis.sediment_model)</a>
-</li>
-        <li><a href="thetis.html#thetis.solver.timed_stage">(in module thetis.solver)</a>
-</li>
-        <li><a href="thetis.html#thetis.solver2d.timed_stage">(in module thetis.solver2d)</a>
-</li>
-        <li><a href="thetis.html#thetis.timeintegrator.timed_stage">(in module thetis.timeintegrator)</a>
-</li>
-        <li><a href="thetis.html#thetis.turbulence.timed_stage">(in module thetis.turbulence)</a>
-</li>
-        <li><a href="thetis.html#thetis.utility.timed_stage">(in module thetis.utility)</a>
-</li>
-      </ul></li>
       <li><a href="thetis.html#thetis.timeintegrator.TimeIntegrator">TimeIntegrator (class in thetis.timeintegrator)</a>
 </li>
       <li><a href="thetis.html#thetis.timeintegrator.TimeIntegratorBase">TimeIntegratorBase (class in thetis.timeintegrator)</a>
