--- a/_modules/thetis/callback.html
+++ b/_modules/thetis/callback.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.callback &#8212; Thetis 0+untagged.2057.gbb0d01b.dirty documentation</title>
+    <title>thetis.callback &#8212; Thetis 0+untagged.2082.gf1a0bbb documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
-    <script src="../../_static/documentation_options.js?v=05ff3d8c"></script>
+    <script src="../../_static/documentation_options.js?v=ccd1159c"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
@@ -640,6 +640,11 @@
         <span class="k">else</span><span class="p">:</span>
             <span class="k">assert</span> <span class="n">ndetectors</span> <span class="o">==</span> <span class="nb">len</span><span class="p">(</span><span class="n">detector_names</span><span class="p">),</span> <span class="s2">&quot;Different number of detector locations and names&quot;</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">detector_names</span> <span class="o">=</span> <span class="n">detector_names</span>
+        <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">det_name</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">detector_names</span><span class="p">):</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">var_attrs</span><span class="p">[</span><span class="n">det_name</span><span class="p">]</span> <span class="o">=</span> <span class="p">{</span>
+                <span class="s1">&#39;x&#39;</span><span class="p">:</span> <span class="n">detector_locations</span><span class="p">[</span><span class="n">i</span><span class="p">][</span><span class="mi">0</span><span class="p">],</span>
+                <span class="s1">&#39;y&#39;</span><span class="p">:</span> <span class="n">detector_locations</span><span class="p">[</span><span class="n">i</span><span class="p">][</span><span class="mi">1</span><span class="p">]</span>
+            <span class="p">}</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_variable_names</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">detector_names</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">detector_locations</span> <span class="o">=</span> <span class="n">detector_locations</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">field_names</span> <span class="o">=</span> <span class="n">field_names</span>
