--- a/_modules/thetis/shallowwater_eq.html
+++ b/_modules/thetis/shallowwater_eq.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.shallowwater_eq &#8212; Thetis 0+untagged.2057.gbb0d01b.dirty documentation</title>
+    <title>thetis.shallowwater_eq &#8212; Thetis 0+untagged.2082.gf1a0bbb documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
-    <script src="../../_static/documentation_options.js?v=05ff3d8c"></script>
+    <script src="../../_static/documentation_options.js?v=ccd1159c"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
@@ -1058,7 +1058,7 @@
         <span class="nb">super</span><span class="p">(</span><span class="n">ShallowWaterEquations</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">)</span>
 
         <span class="n">u_test</span><span class="p">,</span> <span class="n">eta_test</span> <span class="o">=</span> <span class="n">TestFunctions</span><span class="p">(</span><span class="n">function_space</span><span class="p">)</span>
-        <span class="n">u_space</span><span class="p">,</span> <span class="n">eta_space</span> <span class="o">=</span> <span class="n">function_space</span><span class="o">.</span><span class="n">subfunctions</span>
+        <span class="n">u_space</span><span class="p">,</span> <span class="n">eta_space</span> <span class="o">=</span> <span class="n">function_space</span><span class="o">.</span><span class="n">subspaces</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">add_momentum_terms</span><span class="p">(</span><span class="n">u_test</span><span class="p">,</span> <span class="n">u_space</span><span class="p">,</span> <span class="n">eta_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">tidal_farms</span><span class="o">=</span><span class="n">tidal_farms</span><span class="p">)</span>
 
@@ -1106,7 +1106,7 @@
         <span class="nb">super</span><span class="p">(</span><span class="n">ModeSplit2DEquations</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">)</span>
 
         <span class="n">u_test</span><span class="p">,</span> <span class="n">eta_test</span> <span class="o">=</span> <span class="n">TestFunctions</span><span class="p">(</span><span class="n">function_space</span><span class="p">)</span>
-        <span class="n">u_space</span><span class="p">,</span> <span class="n">eta_space</span> <span class="o">=</span> <span class="n">function_space</span><span class="o">.</span><span class="n">subfunctions</span>
+        <span class="n">u_space</span><span class="p">,</span> <span class="n">eta_space</span> <span class="o">=</span> <span class="n">function_space</span><span class="o">.</span><span class="n">subspaces</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">add_momentum_terms</span><span class="p">(</span><span class="n">u_test</span><span class="p">,</span> <span class="n">u_space</span><span class="p">,</span> <span class="n">eta_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">)</span>
 
