--- a/_modules/thetis/utility.html
+++ b/_modules/thetis/utility.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.utility &#8212; Thetis 0+untagged.2057.gbb0d01b.dirty documentation</title>
+    <title>thetis.utility &#8212; Thetis 0+untagged.2082.gf1a0bbb documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css?v=0f3339d6" />
-    <script src="../../_static/documentation_options.js?v=05ff3d8c"></script>
+    <script src="../../_static/documentation_options.js?v=ccd1159c"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
