--- a/model_options_2d.html
+++ b/model_options_2d.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>2D model options &#8212; Thetis 0+untagged.2054.ge07ddf2 documentation</title>
+    <title>2D model options &#8212; Thetis 0+untagged.2082.gf1a0bbb documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css?v=0f3339d6" />
-    <script src="_static/documentation_options.js?v=70f0a730"></script>
+    <script src="_static/documentation_options.js?v=ccd1159c"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script async="async" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -156,7 +156,7 @@ the 2D tracer SUPG stabilization scheme.</p>
 </dd>
 <dt>CommonModelOptions.<strong>nh_model_options</strong><span class="classifier">Instance</span></dt><dd><p>No description</p>
 <p>Default:</p>
-<p>&lt;thetis.options.NonhydrostaticModelOptions object at 0x734ec7e569e0&gt;</p>
+<p>&lt;thetis.options.NonhydrostaticModelOptions object at 0x739c38102a50&gt;</p>
 </dd>
 <dt>CommonModelOptions.<strong>nikuradse_bed_roughness</strong><span class="classifier">FiredrakeScalarExpression</span></dt><dd><p>Nikuradse bed roughness length used to construct the 2D quadratic drag parameter <span class="math notranslate nohighlight">\(C_D\)</span>.</p>
 <blockquote>
@@ -286,7 +286,7 @@ diagnostics will be computed</p>
 </dd>
 <dt>ModelOptions2d.<strong>sediment_model_options</strong><span class="classifier">Instance</span></dt><dd><p>No description</p>
 <p>Default:</p>
-<p>&lt;thetis.options.SedimentModelOptions object at 0x734e7de12b30&gt;</p>
+<p>&lt;thetis.options.SedimentModelOptions object at 0x739c381021e0&gt;</p>
 </dd>
 <dt>ModelOptions2d.<strong>swe_timestepper_type</strong><span class="classifier">‘SSPRK33’|’ForwardEuler’|’BackwardEuler’|’CrankNicolson’|’DIRK22’|’DIRK33’|’SteadyState’|’PressureProjectionPicard’|’SSPIMEX’</span></dt><dd><p>Name of the time integrator</p>
 <p>Default:</p>
